[tool.poetry]
name = "mortgage-calculator"
version = "0.1.0"
description = "Simple mortgage calculator"
authors = ["<AUTHOR>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy-financial = "^1.0.0"


[tool.poetry.group.test.dependencies]
pytest-randomly = "^3.15.0"
pytest = "^8.2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
